Add restricted list cards

--- a/docs/Emerald Edict.adoc
+++ b/docs/Emerald Edict.adoc
@@ -38,7 +38,26 @@ some more text
 |
 :show-link-uri!:
 == Restricted cards
-finally text
+=== image:mons/neutral.svg[width=20] Neutral
+* link:https://www.emeralddb.org/card/contested-countryside[Contested Countryside]
+* link:https://www.emeralddb.org/card/imperial-storehouse[Imperial Storehouse]
+* link:https://www.emeralddb.org/card/kami-unleashed[Kami Unleashed]
+* link:https://www.emeralddb.org/card/keeper-initiate[Keeper Initiate]
+* link:https://www.emeralddb.org/card/proving-ground[Proving Ground]
+* link:https://www.emeralddb.org/card/slovenly-scavenger[Slovenly Scavenger]
+* link:https://www.emeralddb.org/card/lay-of-the-land[Lay of the Land]
+
+=== image:mons/crab.svg[width=20] Crab
+* link:https://www.emeralddb.org/card/kuni-laboratory[Kuni Laboratory]
+* link:https://www.emeralddb.org/card/watch-commander[Watch Commander]
+
+=== image:mons/crane.svg[width=20] Crane
+* link:https://www.emeralddb.org/card/noble-sacrifice[Noble Sacrifice]
+
+=== image:mons/dragon.svg[width=20] Dragon
+* link:https://www.emeralddb.org/card/adorned-temple[Adorned Temple]
+* link:https://www.emeralddb.org/card/sacred-sanctuary[Sacred Sanctuary]
+
 
 |
 :show-link-uri!:
@@ -69,17 +88,40 @@ finally text
 
 some more text
 
-|
+a|
 :show-link-uri!:
 == Restricted cards
-finally text
+=== image:mons/lion.svg[width=20] Lion
+* link:https://www.emeralddb.org/card/called-to-war[Called to War]
+* link:https://www.emeralddb.org/card/chronicler-of-conquests[Chronicler of Conquests]
+* link:https://www.emeralddb.org/card/master-tactician[Master Tactician]
 
-|
+=== image:mons/phoenix.svg[width=20] Phoenix
+
+* link:https://www.emeralddb.org/card/isawa-tadaka-2[Isawa Tadaka 2]
+* link:https://www.emeralddb.org/card/display-of-power[Display of Power]
+
+
+=== image:mons/scorpion.svg[width=20] Scorpion
+
+* link:https://www.emeralddb.org/card/a-fate-worse-than-death[A Fate Worse than Death]
+* [.line-through.new]#link:https://www.emeralddb.org/card/alibi-artist[Alibi Artist]#
+* link:https://www.emeralddb.org/card/dispatch-to-nowhere[Dispatch to Nowhere]
+* link:https://www.emeralddb.org/card/mark-of-shame[Mark of Shame]
+
+=== image:mons/unicorn.svg[width=20] Unicorn
+
+* link:https://www.emeralddb.org/card/scouted-terrain[Scouted Terrain]
+* link:https://www.emeralddb.org/card/swift-magistrate[Swift Magistrate]
+* link:https://www.emeralddb.org/card/utaku-tetsuko[Utaku Tetsuko]
+* link:https://www.emeralddb.org/card/command-the-tributary[Command the Tributary]
+
+a|
 :show-link-uri!:
 == Splash Banned Cards
 === image:mons/phoenix.svg[width=20] Phoenix
 * link:https://www.emeralddb.org/card/against-the-waves[Against the Waves]
-* *[.line-through]#link:https://www.emeralddb.org/card/display-of-power[Display of Power]#*
+* [.line-through.new]#link:https://www.emeralddb.org/card/display-of-power[Display of Power]#
 
 === image:mons/unicorn.svg[width=20] Unicorn
 * link:https://www.emeralddb.org/card/favored-mount[Favored Mount]
